tests/scripts/type_errors/unreachable_expression.roto
fn foo() {
    return true;
    return false;
}
